log

Thu 14 Mar 2024 08:10:36 PM UTC: 
 tests:  0|7
total_score: 0/70
343196f
Thu 14 Mar 2024 08:35:04 PM UTC: 
 exercises.c | 30 +++++++++++++++++++++++++++---
 1 file changed, 27 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:42:15: error: ‘NUll’ undeclared (first use in this function); did you mean ‘NULL’?
   42 |   int *newArr=NUll;
      |               ^~~~
      |               NULL
exercises.c:42:15: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:46:14: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   46 |       *newArr=(int*) malloc(size*sizeof(int));
      |              ^
exercises.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
69b4c14
